<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/jing_title_margin_top"
        android:text="@string/jing_welcome"
        android:textSize="@dimen/jing_dimen_sp_title" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/jing_iv_pic"
        android:layout_width="581.5dp"
        android:layout_height="374dp"
        android:layout_centerInParent="true"
        android:src="@drawable/jing_pic_005z" />

    <TextView
        android:id="@+id/jing_tv_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/jing_tv_note_desc"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/jing_name_margin_bottom"
        android:text="@string/jing_page5z_name"
        android:textSize="@dimen/jing_dimen_sp_name" />

    <TextView
        android:id="@+id/jing_tv_note_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/jing_desc_margin_bottom"
        android:text="@string/jing_page5z_desc"
        android:textSize="@dimen/jing_dimen_sp_desc" />
</RelativeLayout>